<resources>
    <string name="app_name">Recipes</string>
    <string name="title_recipe_list">Recipes</string>
    <string name="title_recipe_detail">Recipe Details</string>
    <string name="title_shopping_list">Shopping List</string>
    <string name="title_today">Today</string>
    <string name="title_activity_login">Sign in</string>

    <string name="navigation_recipe_list">1. Pick</string>
    <string name="navigation_shopping_list">2. Buy</string>
    <string name="navigation_today">3. Cook</string>

    <string name="feature_not_implemented">Sorry! This feature isn\'t available yet.</string>

    <string name="search_hint">Search recipes&#8230;</string>
    <string name="search_button">Search</string>

    <string name="duration_icon_content">Duration</string>
    <string name="source_icon_content">Source</string>
    <string name="duration_format">%1$s min</string>

    <string name="url_format"><a href="%1$s">%2$s</a></string>

    <string name="header_ingredients">Ingredients</string>
    <string name="header_steps">Steps</string>

    <string name="decrease_servings">Decrease servings</string>
    <string name="increase_servings">Increase servings</string>
    <string name="servings">servings</string>
    <string name="add_to_shopping_list">Add to shopping list</string>
    <string name="added_to_shopping_list">Recipe added to shopping list</string>
    <string name="removed_from_shopping_list">Recipe removed from shopping list</string>

    <string name="no_recipes">No Recipes</string>
    <string name="no_source">--</string>
    <string name="no_ingredients">No ingredients</string>
    <string name="no_steps">No steps</string>
    <string name="no_tags">No tags</string>
    <string name="no_shopping_list_items">No items in the shopping list</string>

    <string name="action_open">OPEN</string>

    <string name="edit_button">Edit</string>
    <string name="refresh_button">Refresh</string>
    <string name="signout_button">Sign out</string>
    <string name="buttonClearAll">Clear all</string>
    <string name="clear_completed_button">Clear completed</string>

    <string name="server_client_id">***REMOVED***</string>
    <string name="sign_in_welcome">Welcome</string>
    <string name="sign_in_subtitle">Please sign in by clicking the button below</string>
    <string name="sign_in_signing_in">Signing in…</string>
    <string name="sign_in_signed_in">Signed in successfully</string>
    <string name="sign_in_error_empty_response">Server response body was empty</string>
    <string name="sign_in_error_fail">Sign-In failed</string>
    <string name="sign_in_error_empty_token">Token was empty</string>

    <string name="hint_ingredient">Milk</string>
    <string name="hint_quantity">1200</string>
    <string name="hint_unit">ml</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="ingredient_not_empty">The ingredient name cannot be empty.</string>
    <string name="quantity_valid_number">Quantity must be a valid number.</string>
    <string name="unit_does_not_exist">Please use a unit from the list.</string>
    <string name="edit_ingredient">Edit ingredient</string>
    <string name="ingredient_does_not_exist">Ingredient not found. A new one will be created.</string>

    <string name="hint_duration">30</string>
    <string name="minutes">min</string>
    <string name="hint_source">Book, person, link</string>
    <string name="hint_shopping_list_item">250g Butter</string>
    <string name="hint_new_ingredient">250g Butter</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="step_empty_error">Please enter a step description</string>
    <string name="an_error_occurred">An error occurred:</string>
    <string name="hint_step">Cut the onions.</string>
</resources>
