<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageview_duration_icon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/duration_icon_content"
        app:layout_constraintBottom_toBottomOf="@+id/edittext_duration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edittext_duration"
        app:srcCompat="@drawable/ic_duration_24px" />

    <EditText
        android:id="@+id/edittext_duration"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_edittext"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:hint="@string/hint_duration"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:paddingEnd="24dp"
        android:paddingStart="12dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageview_duration_icon"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="15" />

    <TextView
        android:id="@+id/textview_duration"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical|start"
        android:text="@string/minutes"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/edittext_duration"
        app:layout_constraintStart_toEndOf="@+id/edittext_duration"
        app:layout_constraintTop_toTopOf="@+id/edittext_duration" />

</android.support.constraint.ConstraintLayout>