<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/container_servings_cart"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageViewDecreaseServings"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorButtonNormal"
        android:contentDescription="@string/decrease_servings"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewIncreaseServings"
        app:layout_constraintEnd_toStartOf="@+id/textViewServings"
        app:layout_constraintTop_toTopOf="@+id/imageViewIncreaseServings"
        app:srcCompat="@drawable/ic_remove_24px" />

    <TextView
        android:id="@+id/textViewServings"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@color/colorAccent"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewIncreaseServings"
        app:layout_constraintEnd_toStartOf="@+id/textViewServingsLabel"
        app:layout_constraintTop_toTopOf="@+id/imageViewIncreaseServings"
        tool:text="4" />

    <TextView
        android:id="@+id/textViewServingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        android:gravity="center_vertical"
        android:paddingEnd="8dp"
        android:paddingStart="0dp"
        android:text="@string/servings"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewIncreaseServings"
        app:layout_constraintEnd_toStartOf="@+id/imageViewIncreaseServings"
        app:layout_constraintTop_toTopOf="@+id/imageViewIncreaseServings" />

    <ImageView
        android:id="@+id/imageViewIncreaseServings"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/increase_servings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_add_24px" />

</android.support.constraint.ConstraintLayout>